removed getBannedUsers as not used
