# service/api/api-handler.go
@@ -44,7 +44,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:userId/follows", rt.wrap(HandleFollowUser))
 
 	// ban routes
-	rt.router.GET("/bans", rt.wrap(handleGetBannedUsers))
 	rt.router.GET("/bans/:userId", rt.wrap(handleIsUserBanned))
 	rt.router.DELETE("/users/:userId/bans", rt.wrap(handleUnbanUser))
 	rt.router.POST("/users/:userId/bans", rt.wrap(handleBanUser))
